dark mode settings preventing flicker, move content to head and load inline

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,7 +11,7 @@
   --fntColor:#000;
 }
 
-.darkmode {
+html.darkmode {
   --accent:#FFA8CE;
   --gray:#ECE4BB;
   --gray-light: #534D49;
